Commit para a inserção de efeitos de transição entre as telas, porém com a biblioteca antiga que será descontinuada do Kotlin, futuramente fazer a manutenção para realizar o efeito da maneira atual.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.12.1"
+androidxNavigationCompose = "2.9.3"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -8,13 +9,14 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
 composeBom = "2025.08.00"
-navigationCompose = "2.9.3"
-navigationComposeVersion = " 2.9.3"
+navigationAnimation = "2.8.0"
+navigation = "2.9.3"
+accompanist = "0.34.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 #noinspection SimilarGradleDependency
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-navigation-animation = { module = "androidx.navigation:navigation-animation", version.ref = "navigationAnimation" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -28,6 +30,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+navigation-compose = {module = "androidx.navigation:navigation-compose", version.ref = "navigation"}
+navigation-compose-animation = {module = "androidx.navigation:navigation-compose-animation", version.ref = "navigation"}
+accompanist-navigation-animation = {module = "com.google.accompanist:accompanist-navigation-animation", version = "0.34.0"}
 
 
 [plugins]
